--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <link type="text/css" rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
+    <div>
+    </div>
   </body>
 </html>
