--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap"
       rel="stylesheet"
     />
-    <script type="text/javascript" src="./js/javascript.js" defer></script>
+    <!-- <script type="text/javascript" src="./js/javascript.js" defer></script> -->
+    <script type="text/javascript" src="./js/refactored.js" defer></script>
   </head>
   <body>
     <div class="container">
